# color_reducer

./: CHANGELOG.md  Cargo.toml  README.md
src/: color_reducer.rs  lib.rs
