[package]
name = "color_reducer"
version = "0.3.3"
edition = "2021"
description = "Simplify images by reducing the number of colors based on a predefined palette."
categories = ["multimedia", "multimedia::images"]
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["image", "color", "reduce"]
homepage = "https://github.com/AllenDang/color_reducer"
repository = "https://github.com/AllenDang/color_reducer"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
image = "0.25.5"
imageproc = "0.25.0"
palette = "0.7.6"
rayon = "1.10.0"
